--- a/redis-slave.yml
+++ b/redis-slave.yml
@@ -1,9 +1,14 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis-replica
   namespace: web
 spec:
+  selector:
+    matchLabels:
+        app: redis
+        role: replica
+        tier: backend
   replicas: 1
   template:
     metadata:
