--- a/cowsay-ui-service.yml
+++ b/cowsay-ui-service.yml
@@ -10,6 +10,6 @@ spec:
      - name: http
        protocol: TCP
        port: 80
-       targetPort: http
+       targetPort: 8080
   selector:
       app: cowsay-ui
