--- a/cowsay-ui.yml
+++ b/cowsay-ui.yml
@@ -1,8 +1,10 @@
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: cowsay-ui
+  namespace: web
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: cowsay-ui
@@ -20,11 +22,11 @@ spec:
           name: http
         resources:
           limits:
-             cpu: 200m
-             memory: 300Mi
+             cpu: 50m
+             memory: 500Mi
           requests:
-             cpu: 200m
-             memory: 300Mi
+             cpu: 50m
+             memory: 500Mi
         env:
           - name: COWSAY_SERVER_NAME
             value: 'cowsay'
